fixed adaptive on mobile

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -208,7 +208,7 @@ body.is-blocked::before {
             
         }
         &-wrapper.is-active {
-            height: 100svh;
+            height: 100vh;
             padding: 20px 10px 10px 20px;
             width: 250px;
             animation-name: left;
